# Taskl

./: LICENSE  Main-old.hs  README.md  compoundTask.tsk  compoundTask.tsk~  examples.taskl  simpleOrderedTasks.tsk  simpleOrderedTasks.tsk~  simpleTask.tsk  simpleTask.tsk~  simpleUnorderedTasks.tsk  taskl.cabal  taskl.cabal~
src/: .Main.hs.swp  Main.hs  Main.hs~
