name:                taskl
version:             0.1.0.0
synopsis:            A task management program
description:         Use a simple text based notation to create a task list with dependencies
homepage:            https://github.com/JAPJr/taskl#readme
license:             BSD3
license-file:        LICENSE
author:              John Polo
maintainer:          polophysics@gmail.com
copyright:           2018, John Polo
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable taskl
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers
